<resources>
    <string name="app_name">Astma</string>
    <!-- Strings related to login -->
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="sex">Пол</string>
    <string name="man_sex">Муж.</string>
    <string name="woman_sex">Жен.</string>
    <string name="other">Другое</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="finish_sign_up">Для завершения регестрирации заполните следующие поля.\nИх можно будет изменить в настройках.</string>
    <string name="error_invalid_device_code">Код устройстрва должен содержать 10 символов</string>
    <string name="error_field_required">Поле обязвтельно для заполнения</string>
    <string name="add">Добавить</string>
    <string name="morning">Утро</string>
    <string name="evening">Вечер</string>
    <string name="date_pattern">%1$d.%2$d.%3$d</string>
    <string name="exhale">Выдох</string>
    <string name="exhale_error">Введите значение выдоха</string>
    <string name="network_error">Произошла ошибка. Проверьте Интернет соединение</string>
    <string name="quote_exist">Выдох на выбранную дату уже существует</string>
    <string name="do_you_want_to_edit_quote">Хотите заменить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>
