<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".modules.login.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:padding="12dp"/>

    <ProgressBar
        android:id="@+id/registrationProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_sign_up"
                android:textColor="@color/colorGrey"
                android:layout_marginBottom="@dimen/normal_margin"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorLightGrey" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/surnameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorLightGrey" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonHusband"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man_sex"
                    android:textColor="@color/colorLightGrey"/>

                <RadioButton
                    android:id="@+id/radioButtonKitten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/woman_sex"
                    android:textColor="@color/colorLightGrey"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorLightGrey" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/heightLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorLightGrey" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/weightLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputTextLabel">

                <AutoCompleteTextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorLightGrey" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/finishSignUpButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_button_accent_background"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>